@@ -6,7 +6,7 @@ import java.util.List;
 import java.util.concurrent.TimeUnit;
 
 /**
- * 软引用示例
+ * 软引用示例（设置：JVM启动参数：-Xmx128M -Xms64M -XX:+PrintGCDetails）
  */
 public class SoftReferenceExample {
     public static void main(String[] args) throws InterruptedException {
